src/styles/__mobile.scss
/* ... */
/************************
  Build a Data Model
************************/
.build-a-data-model {
  .campaign-container {
    @media(max-width: $screen-xs-max) {
      padding: 0 10px;
      height: 700px;
      @include retina-image("../assets/images/mobile/data-model/data-model-bg-1", 375px 716px, "png");
    }
    @media(min-width: $screen-sm-min) {
      padding: 0 20px;
      height: 1453px;
      background-image: url(../assets/images/mobile/data-model/data-model-bg-1_2x.png);
      background-repeat: no-repeat;
    }
  }

  .campaign-container-2 {
    @media(max-width: $screen-xs-max) {
      padding: 0 10px;
      height: 420px;
      background-repeat: no-repeat;
      @include retina-image("../assets/images/mobile/data-model/data-model-bg-2", 375px 435px, "png");
    }
    @media(min-width: $screen-sm-min) {
      padding: 0 20px;
      height: 870px;
      background-repeat: no-repeat;
      background-image: url(../assets/images/mobile/data-model/data-model-bg-2_2x.png);
    }
    h1 {
      color: #00a1e0;
    }
    p {
      color: #444444;
    }
    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
      @media(max-width: $screen-xs-max) {
        height: 448px;
      }
    }
  }
  .campaign-container-3 {
   @media(max-width: $screen-xs-max) {
     padding: 0 10px;
     height: 746px;
     @include retina-image("../assets/images/mobile/data-model/data-model-bg-3", 375px 763px, "png");
   }
   @media(min-width: $screen-sm-min) {
     padding: 20px 20px;
     height: 1526px;
     background-image: url(../assets/images/mobile/data-model/data-model-bg-3_2x.png);
   }
   h1 {
     color: #00a1e0;
   }
   p {
     color: #444444;
     @media(max-width: $screen-xs-max) {
       font-size: 18px;
       line-height: 22px;
     }
   }
    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
      @media(max-width: $screen-xs-max) {
        height: 760px;
      }
    }
 }
  //.campaign-container-4 {
  //  @media(max-width: $screen-xs-max) {
  //    padding: 0 10px;
  //    height: 602px;
  //    background-repeat: no-repeat;
  //    @include retina-image("../assets/images/mobile/data-model/data-model-bg-3", 375px 623px, "png");
  //  }
  //  @media(min-width: $screen-sm-min) {
  //    padding: 0 20px;
  //    height: 928px;
  //    background-repeat: no-repeat;
  //    background-image: url(../assets/images/mobile/data-model/data-model-bg-3_2x.png);
  //  }
  //  h1 {
  //    color: #00a1e0;
  //  }
  //  p {
  //    color: #444444;
  //  }
  //  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  //    @media(max-width: $screen-xs-max) {
  //      height: 466px;
  //    }
  //  }
  //}
  //.campaign-container-5 {
  //  @media(max-width: $screen-xs-max) {
  //    padding: 0 10px;
  //    height: 602px;
  //    @include retina-image("../assets/images/backgrounds/mobile-guided-tour-build-a-process-bkg-5", 375px 620px, "png");
  //  }
  //  @media(min-width: $screen-sm-min) {
  //    padding: 0 20px;
  //    height: 1358px;
  //    background-image: url(../assets/images/backgrounds/mobile-guided-tour-build-a-process-bkg-5_2x.png);
  //  }
  //  h1 {
  //    color: #00a1e0;
  //  }
  //  p {
  //    color: #444444;
  //    @media(max-width: $screen-xs-max) {
  //      font-size: 18px;
  //      line-height: 18px;
  //    }
  //  }
  //}
  .campaign-container-4 {
    @media(max-width: $screen-xs-max) {
      padding: 0 10px;
      height: 435px;
      background-repeat: no-repeat;
      @include retina-image("../assets/images/mobile/data-model/data-model-bg-4", 375px 435px, "png");
    }
    @media(min-width: $screen-sm-min) {
      padding: 0 20px;
      height: 906px;
      background-repeat: no-repeat;
      background-image: url(../assets/images/mobile/data-model/data-model-bg-4_2x.png);
    }

    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
      @media(max-width: $screen-xs-max) {
        height: 525px;
      }
    }

    h1 {
      color: #00a1e0;
    }
    p {
      color: #444444;
    }
  }
  .text-center {
    .btn-orange {
      margin-top: 10%;
      @media(min-width: $screen-sm-min) {
        margin-top: 10%;
      }
    }
  }
}
/* ... */

